[package]
name = "Ffp2MaskPrices"
version = "0.1.0"
authors = ["Richard Liebig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
reqwest = { version = "0.11.0", features = ['blocking'] }
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
regex = "1.4.3"
select = "0.5.0"
chrono = "0.4.19"
clap = { version = "2.33.3", features = ['color']}